2012-06-03  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/formation/formation.cpp:
	* rcsc/formation/formation.h:
	- フォーメーション設定ファイルにコメントを書き込むメソッドを追加

2012-06-02  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/player_object.cpp:
	- seeで認識したがタックルを観測出来なかった場合にカウントがリセッ
	トされていたバグを修正
	- 観測距離がvisible distanceより遠い場合はタックルカウントをリセットする

	* rcsc/action/body_smart_kick.cpp:
	* rcsc/action/kick_table.cpp:
	- デバッグ出力修正

	* rcsc/action/kick_table.cpp:
	- 衝突を起こすことがあるので，近い方の中間目標距離の率を0.2から0.3
	に戻した

2012-06-01  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/kick_table.cpp:
	* rcsc/action/kick_table.h:
	- キックノイズの影響でボールを制御範囲外に出してしまうことがあるの
	で，バッファの値を0.05から0.1へ変更
	- 蹴り出した後に敵に妨害されると判定されるとそのままreturnでループ
	を抜けてしまっていたので，続行できるようにcontinueに変更

	* rcsc/player/world_model.cpp:
	- 分身やワープが起きないように，信頼性が高くても背番号を認識できて
	いないプレイヤを先に消去する方針に変更

2012-05-30  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/action_effector.cpp:
	* rcsc/player/self_object.cpp:
	* rcsc/player/self_object.h:
	- キャッチコマンドを失敗した場合に実行時間をリセットしていた誤りを修正

2012-05-29  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/ball_object.cpp:
	* rcsc/player/ball_object.h:
	* rcsc/player/world_model.cpp:
	- プレイモードに応じてボール位置が定まる場合の更新関数を追加

	* rcsc/player/player_object_updater.cpp:
	* rcsc/player/world_model.cpp:
	* rcsc/player/world_model.h:
	- 新しいマッチングアルゴリズムの動作がまだ不安定なため，テスト完了するまで旧アルゴリズムに戻す

	* rcsc/player/player_object_updater.cpp:
	- 分身が起きないように観測誤差を調整

2012-05-28  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/player_object_updater.cpp:
	- デバッグ出力を停止

	* rcsc/action/intention_with_condition.cpp:
	* rcsc/action/intention_with_condition.h:
	- 未使用ファイルを削除

	* rcsc/action/body_kick_collide_with_ball.cpp:
	* rcsc/action/body_kick_collide_with_ball.h:
	* rcsc/action/Makefile.am:
	- Body_KickCollideWithBallを削除

	* rcsc/action/body_go_to_point.cpp:
	* rcsc/action/Makefile.am:
	* rcsc/action/body_go_to_point.h:
	* rcsc/action/bhv_shoot.h:
	* rcsc/action/bhv_shoot2008.cpp: