@@ -1,3 +1,8 @@
+2012-06-04  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* rcsc/action/body_hold_ball2008.cpp:
+	- ボールをキープする距離をkickable_margin*0.7から*0.5へ変更
+
 2012-06-03  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* rcsc/formation/formation.cpp:
